tests/tooling/fixtures/native/execution/negative/global_initializer_forward_reference.objc3
module GlobalInitializerForwardReference;

let folded = base + 1;
let base = 3;

fn main() -> i32 {
  return base;
}
